[package]
name = "lnp-core"
version = "0.6.0"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP Core Library: rust implementation of modular lightning channels architecture"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
exclude = [".github", "contrib", "lightning_encoding", "lnp2p"]
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "lnp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.9.1"
strict_encoding = { version = "1.8.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
lightning_encoding = { version = "0.6.0", git = "https://github.com/LNP-BP/lnp-core", branch = "v0.6" }
descriptor-wallet = { version = "0.6.0", git = "https://github.com/LNP-BP/descriptor-wallet", features = ["keygen", "electrum"] }
lnp2p = { version = "0.6.0", path = "lnp2p", features = ["strict_encoding"] }
lnpbp = { version = "0.6.0", git = "https://github.com/LNP-BP/rust-lnpbp", branch = "v0.6" }
bitcoin = { version = "0.28", git = "https://github.com/LNP-BP/rust-bitcoin", branch = "taproot/all", features = ["rand"] }
secp256k1 = { version = "0.20.3", features = ["global-context-less-secure"] }
internet2 = { version = "0.6.0", git = "https://github.com/internet2-org/rust-internet2", branch = "v0.6" }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
lazy_static = "1.4"

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde"]

[workspace]
members = [".", "lnp2p", "lightning_encoding", "lightning_encoding/derive"]
default-members = [".", "lnp2p", "lightning_encoding", "lightning_encoding/derive"]
exclude = ["dep_test"]
