[package]
name = "lightning_encoding"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Network encoding for lightning network peer protocol data types"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "lightning_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.9.1"
strict_encoding = { version = "1.8.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop", default-features = false, features = ["derive"] }
lightning_encoding_derive = { version = "0.5.0", optional = true }
bitcoin_hashes = "0.10.0" # We need this when bitcoin feature is off
secp256k1 = "0.20.3" # We need this when bitcoin feature is off
bitcoin = { version = "0.28.0", git = "https://github.com/LNP-BP/rust-bitcoin", branch = "taproot/all", optional = true }
chrono = "0.4.19"

[features]
default = ["derive", "bitcoin"]
all = ["derive", "bitcoin"]
derive = ["lightning_encoding_derive"]
