[package]
name = "lnp2p"
version = "0.6.0"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LN P2P Library: rust implementation of lightning network peer protocols (BOLT-1, 2, 7, 9, Bifrost)"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "lnp", "lnp-bp", "bifrost"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "../README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "lnp2p"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.9.1", features = ["hex", "rand"] }
lnpbp = { version = "0.6.0", git = "https://github.com/LNP-BP/rust-lnpbp", branch = "v0.6" }
strict_encoding = { version = "1.8.0", git = "https://github.com/LNP-BP/client_side_validation", branch = "develop", optional = true, features = ["chrono"] }
lightning_encoding = { version = "0.6.0", git = "https://github.com/LNP-BP/lnp-core", branch = "v0.6", optional = true }
descriptor-wallet = { version = "0.6.0", git = "https://github.com/LNP-BP/descriptor-wallet" }
bitcoin = { version = "0.28", git = "https://github.com/LNP-BP/rust-bitcoin", branch = "taproot/all" }
internet2 = { version = "0.6.0", git = "https://github.com/internet2-org/rust-internet2", branch = "v0.6", default-features = false, features = ["derive"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }
lazy_static = "1.4"
chrono = "0.4"

[features]
default = ["legacy"]
all = ['bifrost', "serde"]
legacy = ["lightning_encoding"]
bifrost = ["strict_encoding"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde"]
